# scottish-road-works-homeassistant

./: .gitignore  CHANGELOG.md  Makefile  README.md  hacs.json  pyproject.toml  release-please-config.json
.github/workflows/: lint.yml
custom_components/scottish_road_works/: __init__.py  config_flow.py  const.py  coordinator.py  events.py  geo_location.py  manifest.json  sensor.py  strings.json
custom_components/scottish_road_works/translations/: en.json
tests/: conftest.py  test_coordinator.py  test_events.py  test_geo_location.py
