[project]
name = "scottish-road-works-homeassistant"
version = "0.3.0"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "pyproj"]
integration = ["pytest", "pytest-asyncio", "aiohttp", "pyproj"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "RUF", # ruff-specific
]
ignore = [
    "E501",   # line too long — handled by formatter
    "RUF012", # mutable class attrs are idiomatic in HA entities
]

[tool.ruff.lint.isort]
known-first-party = ["custom_components.scottish_road_works"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["integration: requires live network access (scheduled CI only)"]

[tool.pyright]
pythonVersion = "3.12"
include = ["custom_components/scottish_road_works"]
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportMissingModuleSource = "none"
reportGeneralTypeIssues = "none"
reportCallIssue = "none"
